# screensaver.asteroids

./: .gitignore  .travis.yml  CMakeLists.txt  FindOpenGLES.cmake  README.md  appveyor.yml  azure-pipelines.yml
.github/workflows/: build.yml  increment-version.yml  sync-addon-metadata-translations.yml
debian/: changelog.in  control  copyright  rules
depends/windows/angle/: CMakeLists.txt  angle.sha256  angle.txt  commit.h
screensaver.asteroids/: addon.xml  addon.xml.in
screensaver.asteroids/resources/language/resource.language.af_za/: strings.po
screensaver.asteroids/resources/language/resource.language.am_et/: strings.po
screensaver.asteroids/resources/language/resource.language.ar_sa/: strings.po
screensaver.asteroids/resources/language/resource.language.az_az/: strings.po
screensaver.asteroids/resources/language/resource.language.be_by/: strings.po
screensaver.asteroids/resources/language/resource.language.bg_bg/: strings.po
screensaver.asteroids/resources/language/resource.language.bs_ba/: strings.po
screensaver.asteroids/resources/language/resource.language.ca_es/: strings.po
screensaver.asteroids/resources/language/resource.language.cs_cz/: strings.po
screensaver.asteroids/resources/language/resource.language.cy_gb/: strings.po
screensaver.asteroids/resources/language/resource.language.da_dk/: strings.po
screensaver.asteroids/resources/language/resource.language.de_de/: strings.po
screensaver.asteroids/resources/language/resource.language.el_gr/: strings.po
screensaver.asteroids/resources/language/resource.language.en_au/: strings.po
screensaver.asteroids/resources/language/resource.language.en_gb/: strings.po
screensaver.asteroids/resources/language/resource.language.en_nz/: strings.po
screensaver.asteroids/resources/language/resource.language.en_us/: strings.po
screensaver.asteroids/resources/language/resource.language.eo/: strings.po
screensaver.asteroids/resources/language/resource.language.es_ar/: strings.po
screensaver.asteroids/resources/language/resource.language.es_es/: strings.po
screensaver.asteroids/resources/language/resource.language.es_mx/: strings.po
screensaver.asteroids/resources/language/resource.language.et_ee/: strings.po
screensaver.asteroids/resources/language/resource.language.eu_es/: strings.po
screensaver.asteroids/resources/language/resource.language.fa_af/: strings.po
screensaver.asteroids/resources/language/resource.language.fa_ir/: strings.po
screensaver.asteroids/resources/language/resource.language.fi_fi/: strings.po
screensaver.asteroids/resources/language/resource.language.fo_fo/: strings.po
screensaver.asteroids/resources/language/resource.language.fr_ca/: strings.po
src/: Asteroids.cpp  Asteroids.h  asteroid.cpp  asteroid.h  bullet.cpp  bullet.h  main.cpp  main.h  ship.cpp  ship.h  timer.h  types.h
src/shaders/: GUIShader.cpp  GUIShader.h  Matrix.cpp  Matrix.h  Shader.cpp  Shader.h
(+49 files in other folders)
